--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
           </span>
         </div>
         <div class="social-icons">
-          <a href="https://www.facebook.com/DigitizeAds?mibextid=ZbWKwL" class="social-icon">
+          <a href="https://www.facebook.com/DigitizeAds?mibextid=ZbWKwL" class="social-icon" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://instagram.com/" class="social-icon">
+          <a href="https://instagram.com/" class="social-icon" target="_blank">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.linkedin.com/company/digitizeads/" class="social-icon">
+          <a href="https://www.linkedin.com/company/digitizeads/" class="social-icon" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
-          <a href="https://www.youtube.com/@digitizeads1970" class="social-icon">
+          <a href="https://www.youtube.com/@digitizeads1970" class="social-icon" target="_blank">
             <i class="fab fa-youtube"></i>
           </a>
 
@@ -743,10 +743,13 @@
         </div>
         <!-- Owl Carousel Slider Ends -->
 
+        
         <div class="button-container">
-          <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
-
+          <a href="https://www.example.com/review" target="_blank">
+              <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
+          </a>
+      </div>
+      
       </section>
 
       <div class="social-button whatsapp">
@@ -847,6 +850,15 @@
     </div>
   </div>
 
+
+  <div class="marquee-container">
+    <h2>Our Services</h2>
+    <div class="marquee-text">
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      </marquee>
+    </div>
+  </div>
 
   <!-- 
     - #FOOTER
