--- a/localization.html
+++ b/localization.html
@@ -277,19 +277,21 @@
 
           <div class="carousel-container">
             <div class="carousel">
-              <img src="./assets/img/chanel.webp" alt="Company 1 Logo">
-              <img src="./assets/img/ebay.webp" alt="Company 2 Logo">
-              <img src="./assets/img/fedex.webp" alt="Company 3 Logo">
-              <img src="./assets/img/fedex.webp" alt="Company 4 Logo">
-              <img src="./assets/img/mcdonalds.webp" alt="Company 5 Logo">
-              <img src="./assets/img/walmart.webp" alt="Company 6 Logo">
-              <img src="./assets/img/nestlé.webp" alt="Company 7 Logo">
-              <img src="./assets/img/mastercard.webp" alt="Company 8 Logo">
-              <img src="./assets/img/starbucks.webp" alt="Company 9 Logo">
-              <img src="./assets/img/disney.webp" alt="Company 10 Logo">
-              <img src="./assets/img/volkswagen.webp" alt="Company 11 Logo">
-              <img src="./assets/img/wwf-logo-2400x2400-20220512.webp" alt="Company 12 Logo">
-              <img src="./assets/img/exxon.webp" alt="Company 13 Logo">
+              <!-- <img src="./assets/img/chanel.webp" alt="Company 1 Logo"> -->
+              <img src="./assets/img/logo1.png" alt="Company 2 Logo">
+              <img src="./assets/img/logo2.png" alt="Company 3 Logo">
+              <img src="./assets/img/logo3.png" alt="Company 4 Logo">
+              <img src="./assets/img/logo4.png" alt="Company 5 Logo">
+              <img src="./assets/img/logo5.png" alt="Company 6 Logo">
+              <img src="./assets/img/logo6.png" alt="Company 7 Logo">
+              <img src="./assets/img/logo7.png" alt="Company 8 Logo">
+              <img src="./assets/img/logo8.png" alt="Company 9 Logo">
+              <img src="./assets/img/logo9.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo10.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo11.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo12.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo13.png" alt="Company 10 Logo">
+              <img src="./assets/img/logo14.png" alt="Company 10 Logo">
             </div>
           </div>
 
@@ -731,7 +733,14 @@
 
   </section>
 
-
+  <div class="marquee-container">
+    <h2>Our Services</h2>
+    <div class="marquee-text">
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      </marquee>
+    </div>
+  </div>
 
   <!--      WHATSAPPBTN -->
 
