--- a/portfolio.html
+++ b/portfolio.html
@@ -174,9 +174,20 @@
         </article>
       </div>
     </div>
+    
 
   </section>
 
+
+  <div class="marquee-container">
+    <h2>Our Services</h2>
+    <div class="marquee-text">
+      <marquee behavior="scroll" direction="left" scrollamount="8" onmouseover="this.stop();" onmouseout="this.start();">
+        Website Designing, Website Development, Ecommerce Solutions, Google Adwords, Social Media Optimization, Email And Sms Marketing, App Marketing, Search Engine Optimization, Reputation Management, Web Hosting, Custom Software Development, Software Development, Outsourcing, Mobile App Development, Web Application Development, Software Testing Services & QA, Cloud Server Management
+      </marquee>
+    </div>
+  </div>
+  
 
   <div class="social-button whatsapp">
     <img src="./assets/img/whatsapp.png" alt="WhatsApp">
